--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             justify-content: space-around;
             align-items: center;
             height: 60px;
-            width: 80%; /* Сделал немного уже */
+            width: calc(100% - 20px); /* Изменена ширина */
             max-width: 400px;
             background: rgba(255, 255, 255, 0.5);
             border-radius: 30px;
@@ -172,7 +172,7 @@
             box-shadow: 0 -4px 16px rgba(0, 0, 0, 0.05);
             
             position: fixed;
-            bottom: 50px; /* Сместил ниже */
+            bottom: 10px; /* Изменено положение */
             left: 50%;
             transform: translateX(-50%);
             z-index: 10;
@@ -321,7 +321,6 @@
             const navItems = document.querySelectorAll('.nav-item');
             const contentSections = document.querySelectorAll('.content-section');
 
-            // Find the active section and activate its nav item on page load
             const activeSectionId = window.location.hash.substring(1) || 'home';
             const initialActiveNav = document.querySelector(`.nav-item[data-target="${activeSectionId}"]`);
             if (initialActiveNav) {
@@ -331,7 +330,6 @@
             if (initialActiveSection) {
                 initialActiveSection.classList.add('active');
             } else {
-                // Default to home if hash is invalid
                 document.getElementById('home').classList.add('active');
             }
 
