--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             justify-content: space-around;
             align-items: center;
             height: 60px;
-            width: calc(100% - 20px); /* Изменена ширина */
+            width: calc(100% - 20px); 
             max-width: 400px;
             background: rgba(255, 255, 255, 0.5);
             border-radius: 30px;
@@ -172,14 +172,14 @@
             box-shadow: 0 -4px 16px rgba(0, 0, 0, 0.05);
             
             position: fixed;
-            bottom: 10px; /* Изменено положение */
+            bottom: 10px;
             left: 50%;
             transform: translateX(-50%);
             z-index: 10;
         }
 
         .nav-item {
-            color: #1a1a1a;
+            color: #1a1a1a; 
             font-size: 12px;
             text-align: center;
             display: flex;
@@ -199,7 +199,7 @@
         .nav-icon {
             height: 24px;
             width: 24px;
-            fill: #1a1a1a;
+            fill: #1a1a1a; 
             margin-bottom: 4px;
         }
         
